--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="estudo.produto.presenter">
-
+  <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,11 +15,7 @@
             android:exported="false"
             android:screenOrientation="portrait"
             />
-        <activity
-            android:name="estudo.produto.presenter.presenter.UsuarioActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            />
+        
         <activity
             android:name="estudo.produto.presenter.presenter.CadastroActivity"
             android:exported="false"
