--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,27 +3,28 @@
     package="estudo.produto.presenter">
   <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".Myapp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-         android:name=".Myapp"
+
         android:theme="@style/Theme.Servicos_Gerais">
         <activity
             android:name="estudo.produto.presenter.presenter.HomeActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             />
         
         <activity
             android:name="estudo.produto.presenter.presenter.CadastroActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name="estudo.produto.presenter.presenter.LoginActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
